ADM-152733 Local ansible now runs on node initialisation. Added some Confluence JVM params for EAC. Allowed latest git to be installed if no version is specified.